# subsetix

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cu  main2.cu  main3.cu  main4.cu  main5.cu  main6.cu  main7.cu  requirements-dev.txt
.github/workflows/: ci.yml
bench/: count_multishape.cpp  workspace_benchmark.cu
docs/: user_interface_ideas.md
src/: cuda_utils.cuh  interval_intersection.cu  interval_intersection.cuh  interval_merge.hpp  main.cu  operation_chain.cu  operation_chain.cuh  surface_chain_builder.cu  surface_chain_builder.cuh  surface_chain_executor.cu  surface_chain_executor.cuh  surface_demo.cu  surface_generator.cpp  surface_generator.hpp  test_intersection.cu  volume_demo.cu  volume_generator.cpp  volume_generator.hpp
subsetix_amr2/: README.md  __init__.py  api.py  bench_grading.py  bench_sync.py  bench_threshold.py  bench_upwind.py  demo_two_level_advection.py  export.py  fields.py  geometry.py  regrid.py  runner.py  simulation.py  visualize.py
subsetix_amr2/tests/: __init__.py  test_api.py  test_demo.py  test_export.py  test_fields.py  test_geometry.py  test_regrid.py  test_runner.py  test_simulation.py  test_symmetry.py
subsetix_cupy/: __init__.py  benchmark_multishape.py  demo_advection2d.py  demo_advection2d_amr.py  demo_advection2d_amr3.py  demo_amr_cycle.py  demo_ghosts.py  demo_multilevel.py  demo_multilevel_layout.py  demo_multishape.py  demo_regrid_dynamic.py  export_vtk.py  expressions.py  interval_field.py  interval_stencil.py  kernels.py  morphology.py  multilevel.py  plot_utils.py
subsetix_cupy/benchmarks/: __init__.py  __main__.py  cases.py  utils.py
subsetix_cupy/tests/: __init__.py  test_amr_grading.py  test_expressions.py  test_interlevel_ops.py  test_interval_stencil.py  test_morphology.py  test_multilevel.py  test_multilevel_field.py
test/: device.cu  intersection.cu  lower_bound.cu
